# backend

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  config.schema.json  entrypoint.sh  justfile  openapi.json  pyproject.toml
.github/workflows/: release.yml
alembic/: env.py  script.py.mako
alembic/versions/: 2025_12_12_1141-fbcbd179bfba_.py  2025_12_16_2009-1115871d7f82_add_analysis_table.py  2025_12_16_2012-ecfbf550a848_add_analysis_tables.py  2025_12_17_1927-4a8da2f6619f_add_is_test_to_interviewtable.py  2025_12_18_2018-fbcbd179bfba_.py  2025_12_20_2306-0f4f8dfe77c1_add_color_to_annotation.py  2025_12_22_1537-71bb37e4bf8c_rename_collaboratorrole.py  2025_12_22_1820-64a392d65079_add_annotator_to_collaboratorrole.py  2026_01_05_1451-2ef8dd7c8a23_force_answering_model_for_testsetuptable.py  2026_01_06_1137-b0d2ed7af240_add_relationship_between_invitation_and_.py  2026_01_08_2103-c0a644746783_fix_interview_type.py  2026_01_16_1234-ce37e3db752d_new_relationship_between_interview_and_.py  2026_01_16_1626-268a6e6492c3_new_interview_status_column.py  2026_01_28_1700-035081c70145_add_experiment_project_association_table.py  2026_01_28_1718-b8c223b73504_add_user_id_to_experiment_table.py  2026_02_11_2215-eb4cc6fea943_add_ondelete_cascade_to_interview_and_.py  2026_02_12_1237-9874b7e17e42_add_more_cascades_and_relationships_to_.py  2026_02_16_1217-f2eb46f01fbf_add_skipped_by_condition_column_to_.py  2026_02_18_1033-05c658ea7a7a_add_assistance_session_and_message_.py  2026_02_18_1534-77c4a96153cb_change_name_to_first_name_last_name_.py  2026_02_23_1220-9736839a677f_add_owner_id_to_project_table.py  2026_02_25_1121-2d7cafc8b167_update_invitationtable_fields.py  2026_02_25_1126-8ddc73cff870_update_user_expires_column_type.py  2026_02_25_1134-66c0a69c8c4c_change_invite_token_type_to_uuid_in_.py  2026_02_25_1240-01fdd18d0c82_get_prod_up_to_date.py  2026_02_25_1427-db7e0b1a210b_add_ondelete_cascade_to_collaborator_.py  2026_02_26_1039-790569df2e3e_add_extra_user_columns.py  2026_02_26_1054-347e5e37e060_add_organization_column_to_user.py  2026_03_12_1052-1a81ba0cd8c4_change_external_params_from_str_to_dict.py  2026_03_12_1550-e5ccbc57a375_add_external_params_to_projecttable.py  2026_03_20_1052-073a22823ffa_add_refresh_token_table_for_token_.py  (+28 more)
app/: __init__.py  auth.py  cli.py  dependencies.py  main.py  paths.py  platform_release.py  settings.py  storage.py  translations.py  types.py  utils.py  websockets.py
app/api/: auth.py  main.py  (+6 more)
scripts/: locust_file.py  openai_realtime_microphone_client.py  send_bundle.py
(+119 files in other folders)
